tests/snapshots/snapshot_tests__render_resource_list_with_resource_type_filter.snap
---
source: tests/snapshot_tests.rs
expression: terminal.backend()
---
"┌Kustomization (1)─────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│STATUS  NAMESPACE       NAME                           PATH                           REVISION             PR SU RE AG│"
"│●       flux-system     my-kustomization               -                              main@sha1:abc123     -  Fa Tr 2h│"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
