tests/snapshots/snapshot_tests__render_resource_list_with_selection.snap
---
source: tests/snapshot_tests.rs
expression: terminal.backend()
---
"┌All Resources (3)─────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│STATUS  NAMESPACE       NAME                           TYPE                 SUSPENDED  READY  AGE     MESSAGE         │"
"│✗       default         my-helmrelease                 HelmRelease          True       False  3h      Suspended       │"
"│●       flux-system     my-gitrepo                     GitRepository        False      True   1h      Fetched revision│"
"│●       flux-system     my-kustomization               Kustomization        False      True   2h      Applied revision│"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
