tests/snapshots/snapshot_tests__render_resource_yaml_with_data.snap
---
source: tests/snapshot_tests.rs
expression: terminal.backend()
---
"┌YAML - Kustomization - my-kustomization───────────────────────────────────────────────────────────────────────────────┐"
"│apiVersion: kustomize.toolkit.fluxcd.io/v1                                                                            │"
"│kind: Kustomization                                                                                                   │"
"│metadata:                                                                                                             │"
"│  name: my-kustomization                                                                                              │"
"│  namespace: flux-system                                                                                              │"
"│spec:                                                                                                                 │"
"│  path: ./kustomize                                                                                                   │"
"│  sourceRef:                                                                                                          │"
"│    kind: GitRepository                                                                                               │"
"│    name: my-gitrepo                                                                                                  │"
"│status:                                                                                                               │"
"│  conditions:                                                                                                         │"
"│  -message: 'Applied revision: main@sha1:abc123'                                                                      │"
"│    status: 'True'                                                                                                    │"
"│    type: Ready                                                                                                       │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
